--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,3 +1,5 @@
+/*@import "compass"
+*/
 .container
 {
 	width: 710px;
@@ -6,7 +8,15 @@
 
 body
 {
-	background: #cff;
+	background: rgb(5,171,224); /* Old browsers */
+	background: -moz-linear-gradient(top,  rgba(5,171,224,1) 0%, rgba(83,203,241,1) 60%, rgba(135,224,253,1) 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(5,171,224,1)), color-stop(60%,rgba(83,203,241,1)), color-stop(100%,rgba(135,224,253,1))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  rgba(5,171,224,1) 0%,rgba(83,203,241,1) 60%,rgba(135,224,253,1) 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  rgba(5,171,224,1) 0%,rgba(83,203,241,1) 60%,rgba(135,224,253,1) 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  rgba(5,171,224,1) 0%,rgba(83,203,241,1) 60%,rgba(135,224,253,1) 100%); /* IE10+ */
+	background: linear-gradient(to bottom,  rgba(5,171,224,1) 0%,rgba(83,203,241,1) 60%,rgba(135,224,253,1) 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#05abe0', endColorstr='#87e0fd',GradientType=0 ); /* IE6-9 */
+	background-size: contain;
 }
 
 header
@@ -31,6 +41,7 @@ header
     width:160px;
     list-style-type: none;
     margin-top: 120px; /*make room for header*/
+    box-shadow: 8px 8px 20px 4px #333333;
 }
 
  /* links */
@@ -38,7 +49,7 @@ header
     text-decoration: none;
     font-size: 140%;
     color: white; 
-    padding: 10.5px 11px;
+    padding: 10px 12px;
     background-color: #005555;
     display:block;
 }
@@ -58,7 +69,7 @@ section
 {
 	font-size: 120%;
 	padding: 10px;
-	background: #fff;
+	background: #eeeeee;
 	
 }
 
@@ -66,10 +77,12 @@ section
 .content{
 	position: absolute;
 	top: 120px;
-	left: 180px;
+	left: 190px;
 	margin-right: 140px;
 	padding: 10px;
-	background: #ff0;
+	background: #F04C40;
+	border-radius: 4px;
+	box-shadow: 8px 8px 20px 4px #333333;
 }
 
 .content img{
